harbor/assets/ingress-panel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-panel-ingress
  namespace: harbor
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - reg-panel.sepidan.net
    secretName: harbor-tls
  rules:
  - host: reg-panel.sepidan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
